@@ -68,6 +68,8 @@ NStandardTriangulation* NStandardTriangulation::isStandardTriangulation(
         return ans;
     if ((ans = NPlugTriSolidTorus::isPlugTriSolidTorus(comp)))
         return ans;
+    if ((ans = NLayeredSolidTorus::isLayeredSolidTorus(comp)))
+        return ans;
     if ((ans = NSnapPeaCensusTri::isSmallSnapPeaCensusTri(comp)))
         return ans;
 
