@@ -58,7 +58,10 @@ void addNLayeredSolidTorus() {
         .def("formsLayeredSolidTorusBase",
             &NLayeredSolidTorus::formsLayeredSolidTorusBase,
             return_value_policy<manage_new_object>())
+        .def("isLayeredSolidTorus", &NLayeredSolidTorus::isLayeredSolidTorus,
+            return_value_policy<manage_new_object>())
         .staticmethod("formsLayeredSolidTorusBase")
+        .staticmethod("isLayeredSolidTorus")
     ;
 
     implicitly_convertible<std::auto_ptr<NLayeredSolidTorus>,
